final version 1.0